fix docking visibility calculation

--- a/packages/test-app/src/components/Transitions/Transitions.css
+++ b/packages/test-app/src/components/Transitions/Transitions.css
@@ -16,9 +16,13 @@
 }
 
 .cdv-presentation__viewport--horizontal .transitions {
-	background: linear-gradient(to left, rgba(0, 0, 0, .5) 1px, transparent 0);
+	background:
+		linear-gradient(to left, rgba(0, 0, 0, .5) 1px, transparent 0),
+		linear-gradient(to right, rgba(0, 0, 0, .5) 1px, transparent 0);
 }
 
 .cdv-presentation__viewport--vertical .transitions {
-	background: linear-gradient(to top, rgba(0, 0, 0, .5) 1px, transparent 0);
+	background:
+		linear-gradient(to top, rgba(0, 0, 0, .5) 1px, transparent 0),
+		linear-gradient(to bottom, rgba(0, 0, 0, .5) 1px, transparent 0);
 }
